[package]

name = "racer"
version = "1.0.0"
license = "MIT"
description = "Code completion for Rust"
authors = ["Phil Dawes <phil@phildawes.net>"]

[lib]
name = "racer"
path = "src/racer/lib.rs"

[[bin]]
name = "racer"
path = "src/bin/main.rs"

[profile.release]
debug = true

[dependencies]
log = "*"
syntex_syntax = "*"
toml = "*"
env_logger = "*"

[dependencies.clap]
version = "~1.2.0"
default-features = false

[features]
nightly = []
